<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.jamespace.eazymemory.DetailActivity">

    <TextView
        android:id="@+id/detail_title"
        android:text="@string/detail_title_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detail_content_text"
        android:text="This is the detail..."
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/detail_title"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detail_date"
        android:text="datetext"
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_alignParentRight="true"
        android:layout_below="@id/detail_content_text"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/delet_button"
        android:text="@string/delet_button_text"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:background="@drawable/gradient_button"
        android:layout_below="@+id/detail_content_text"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/goBackText"
        android:textColor="#e1121313"
        android:background="@drawable/gradient_textview"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/goBackText"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/editText"
        android:textColor="#e1121313"
        android:gravity="center"
        android:background="@drawable/gradient_textview"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/editText"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
</RelativeLayout>
