<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.jamespace.eazymemory.EditActivity">


    <TextView
        android:id="@+id/editTitle"
        android:layout_marginTop="20dp"
        android:hint="@string/title_text"
        android:textColor="#fbfbfc"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_title"
        android:background="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_content_text"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="start"
        android:layout_below="@+id/edit_title"
        android:layout_width="250dp"
        android:layout_height="280dp" />

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/cancleText"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/gradient_button"
        android:layout_below="@+id/edit_content_text"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/saveButton"
        android:text="@string/savetext"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_content_text"
        android:layout_toRightOf="@+id/cancel_button"
        android:layout_marginLeft="15dp"
        android:background="@drawable/gradient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
